nav menu elements vertical alignment fixed

--- a/styles/components/Navbar.module.scss
+++ b/styles/components/Navbar.module.scss
@@ -3,6 +3,7 @@
 .nav {
   position: relative;
   display: flex;
+  align-items: center;
 
   &__menu {
     position: absolute;
